created music web site

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <i id="next" class="material-icons">skip_next</i>
         <i id="more-music" class="material-icons">queue_music</i>
       </div>
-      <div class="music-list">
+      <div class="list">
         <div class="header">
           <div class="row">
             <i class="list material-icons">queue_music</i>
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <script src="music-list.js"></script>
+    <script src="list.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
